[tool]
[tool.poetry]
name = "hainesm6-utils"
# version may differ from pypi given GitHub workflows. See releases at homepage.
version = "0.2.0"
homepage = "https://github.com/hainesm6/hainesm6-utils"
description = "Collection of utility code needed for various projects."
authors = ["Matthew Haines <hainesm6@gmail.com>"]
readme = "README.md"
license =  "BSD-3-Clause"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "hainesm6_utils" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pingouin = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
jinja2= "3.0.0"
pytest = "*"
flake8-docstrings = "*"
pytest-cov = "*"
pre-commit = "*"
twine = "*"
mkdocs = "^1.3.1"
mkdocs-material = "^6.1.7"
mkdocs-material-extensions = "^1.0.3"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^3.6.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
